chore: ignore e2e tests and deployment documentation

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -42,16 +42,14 @@ yarn-error.log*
 next-env.d.ts
 
 # Playwright
-node_modules/
 /test-results/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
-test-results/
 test-resend.js
 
-#Testing
-e2e*
+# Testing - E2E
+/e2e/
 
-# Deployment md
+# Deployment documentation
 DEPLOYMENT.md
