--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,10 @@
     "@strapi/plugin-users-permissions": "5.24.2",
     "@strapi/provider-upload-cloudinary": "^5.30.1",
     "@strapi/strapi": "^5.29.0",
-    "better-sqlite3": "^11.3.0",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
     "pg": "^8.16.3",
+    "pg-connection-string": "^2.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.0.0",
@@ -35,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
+    "better-sqlite3": "^12.4.6",
     "typescript": "^5"
   },
   "engines": {
