--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "city-blog-pets",
+  "name": "backend",
   "version": "0.1.0",
   "private": true,
   "description": "A Strapi application",
